2009-10-01  Christopher Bratusek <zanghar@freenet.de>
	* configure.in
	* OPTIONS
	* src/play-sample.c
	* src/Makefile.in
	* Makedefs.in
	* sawfish.ebuild.in
	* lisp/sawfish/wm/util/play-audio.jl: removed built-in audio support, using /usr/bin/paplay by default

	* man/sawfish.texi
	* KEYBINDINGS
	* lisp/sawfish/wm/frames.jl
	* lisp/sawfish/wm/keymaps.jl: added new buttons (frame-classes) (+ keymaps and docs):
                                      - sticky button
				      - lock button
				      - rename button
				      - move/resize button
				      - raise/lower button

	* lisp/sawfish/wm/menus.jl: string change in customize-menu

	* man/news.texi: updated

	* OPTIONS: updated

2009-09-29  Jeremy Hankins <nowan@nowan.org>
	* lisp/sawfish/cfg/apply.jl
	* lisp/sawfish/cfg/config.jl
	* lisp/sawfish/cfg/group.jl
	* lisp/sawfish/cfg/i18n.jl
	* lisp/sawfish/cfg/layout.jl
	* lisp/sawfish/cfg/layouts/keymaps.jl
	* lisp/sawfish/cfg/shell.jl
	* lisp/sawfish/cfg/slot.jl
	* lisp/sawfish/cfg/widgets/command.jl
	* lisp/sawfish/cfg/widgets/event.jl
	* lisp/sawfish/cfg/widgets/frame-style.jl
	* lisp/sawfish/cfg/widgets/gtk/icon.jl
	* lisp/sawfish/cfg/widgets/gtk/workspace-geometry.jl
	* lisp/sawfish/cfg/widgets/icon.jl
	* lisp/sawfish/cfg/widgets/keymap.jl
	* lisp/sawfish/cfg/widgets/match-window.jl
	* lisp/sawfish/cfg/widgets/modifier-list.jl
	* lisp/sawfish/cfg/widgets/workspace-geometry.jl
	* lisp/sawfish/cfg/wm.jl
	* lisp/sawfish/gtk/stock.jl
	* lisp/sawfish/gtk/widget-dialog.jl
	* lisp/sawfish/gtk/widget-test.jl
	* lisp/sawfish/gtk/widget.jl
	* lisp/sawfish/gtk/widgets/alist.jl
	* lisp/sawfish/gtk/widgets/color.jl
	* lisp/sawfish/gtk/widgets/file.jl
	* lisp/sawfish/gtk/widgets/list.jl
	* lisp/sawfish/gtk/widgets/pair.jl
	* lisp/sawfish/gtk/widgets/program.jl
	* lisp/sawfish/gtk/widgets/scheme-boolean.jl
	* lisp/sawfish/wm.jl
	* lisp/sawfish/wm/animation/outline.jl
	* lisp/sawfish/wm/autoload.jl
	* lisp/sawfish/wm/commands.jl
	* lisp/sawfish/wm/commands/cycle.jl