@@ -1,33 +1,32 @@
-#| nokogiri-widgets/font.jl -- font selection widget
+;; nokogiri-widgets/font.jl -- font selection widget
+;;
+;; Copyright (C) 2000 John Harper <john@dcs.warwick.ac.uk>
+;;
+;; This file is part of sawfish.
+;;
+;; sawfish is free software; you can redistribute it and/or modify it
+;; under the terms of the GNU General Public License as published by
+;; the Free Software Foundation; either version 2, or (at your option)
+;; any later version.
+;;
+;; sawfish is distributed in the hope that it will be useful, but
+;; WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+;;
+;; You should have received a copy of the GNU General Public License
+;; along with sawfish; see the file COPYING.  If not, write to
+;; the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
 
-   $Id$
+(define-structure sawfish.gtk.widgets.font
 
-   Copyright (C) 2000 John Harper <john@dcs.warwick.ac.uk>
-
-   This file is part of sawfish.
-
-   sawfish is free software; you can redistribute it and/or modify it
-   under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
-   any later version.
-
-   sawfish is distributed in the hope that it will be useful, but
-   WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
-
-   You should have received a copy of the GNU General Public License
-   along with sawfish; see the file COPYING.  If not, write to
-   the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
-|#
-
-(define-structure sawfish.gtk.widgets.font ()
+    (export )
 
     (open rep
-	  rep.system
-	  gui.gtk-2.gtk
-	  sawfish.gtk.widget
-	  sawfish.wm.util.font)
+          rep.system
+          gui.gtk-2.gtk
+          sawfish.gtk.widget
+          sawfish.wm.util.font)
 
   ;; FIXME: this is broken, in that only if Xrender is present
   ;; does gdk use Xft. But, it's the best I can do..
@@ -65,7 +64,7 @@
 	    (gtk-font-selection-dialog-cancel-button fontsel) "clicked"
 	    (lambda () (gtk-widget-destroy fontsel)))
 	   (g-signal-connect fontsel "delete_event"
-			       (lambda () (gtk-widget-destroy fontsel)))
+                             (lambda () (gtk-widget-destroy fontsel)))
 	   (gtk-widget-show fontsel)
 	   (gtk-grab-add fontsel))))
       (gtk-widget-show box)
@@ -76,12 +75,12 @@
 			  (gtk-entry-set-text entry x))
 			 ((consp x)
 			  (let ((face (cond
-					((string-equal (car x) "Xft")
-					 (xft-description->face (cdr x)))
-					((string-equal (car x) "xlfd")
-					 (xlfd-description->face (cdr x)))
-					((string-equal (car x) "pango")
-					 (pango-description->face (cdr x))))))
+                                       ((string-equal (car x) "Xft")
+                                        (xft-description->face (cdr x)))
+                                       ((string-equal (car x) "xlfd")
+                                        (xlfd-description->face (cdr x)))
+                                       ((string-equal (car x) "pango")
+                                        (pango-description->face (cdr x))))))
 			    (when face
 			      (gtk-entry-set-text
 			       entry (face->pango-description face)))))
