@@ -7,30 +7,29 @@ exec rep "$0" "$@"
 
 !#
 
-#| sawfish-about.jl.in -- helper process for sawfish about dialog
+;; sawfish-about.jl.in -- helper process for sawfish about dialog
+;;
+;; Copyright (C) 2000 John Harper <john@dcs.warwick.ac.uk>
+;;
+;; This file is part of sawfish.
+;;
+;; sawfish is free software; you can redistribute it and/or modify it
+;; under the terms of the GNU General Public License as published by
+;; the Free Software Foundation; either version 2, or (at your option)
+;; any later version.
+;;
+;; sawfish is distributed in the hope that it will be useful, but
+;; WITHOUT ANY WARRANTY; without even the implied warranty of
+;; MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+;; GNU General Public License for more details.
+;;
+;; You should have received a copy of the GNU General Public License
+;; along with sawfish; see the file COPYING.  If not, write to
+;; the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
 
-   $Id: sawfish-about.jl.in,v 1.10 2003/01/12 20:35:21 jsh Exp $
+(structure
 
-   Copyright (C) 2000 John Harper <john@dcs.warwick.ac.uk>
-
-   This file is part of sawfish.
-
-   sawfish is free software; you can redistribute it and/or modify it
-   under the terms of the GNU General Public License as published by
-   the Free Software Foundation; either version 2, or (at your option)
-   any later version.
-
-   sawfish is distributed in the hope that it will be useful, but
-   WITHOUT ANY WARRANTY; without even the implied warranty of
-   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-   GNU General Public License for more details.
-
-   You should have received a copy of the GNU General Public License
-   along with sawfish; see the file COPYING.  If not, write to
-   the Free Software Foundation, 675 Mass Ave, Cambridge, MA 02139, USA.
-|#
-
-(structure ()
+    (export )
 
     (open rep
 	  gui.gtk-2.gtk
@@ -53,7 +52,7 @@ exec rep "$0" "$@"
 
   (let* ((hbox (gtk-hbox-new t 0))
 	 (ref (gtk-link-button-new-with-label "http://sawfish.wikia.com/"
-				(_ "Sawfish homepage"))))
+                                              (_ "Sawfish homepage"))))
     (gtk-box-pack-start hbox ref)
     (gtk-widget-show-all hbox)
     (let ((widget (about-dialog title version copyright
