@@ -1,3 +1,8 @@
+2009-10-03  Jeremy Hankins <nowan@nowan.org>
+	* lisp/sawfish/cfg/main.jl.in
+	* lisp/sawfish/gtk/widgets/font.jl.in
+	* scripts/sawfish-about.jl.in: Whitespace cleanup in files that were missed before.
+
 2009-10-01  Christopher Bratusek <zanghar@freenet.de>
 	* configure.in
 	* OPTIONS
